# 3D-Game

./: CMakeLists.txt  Initializer.h  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  TextVertexShader.vertexshader  main.cpp
Components/: Component.h
GameObject/: GameObject.cpp  GameObject.h
Math/: Vectors.cpp  Vectors.h
Shaders/: Shader.cpp
source/: DepthFragShader.fragmentshader  DepthShader.vertexshader  EventSystem.cpp  EventSystem.h  Initializer.cpp  Initializer.h  LightingController.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.h  ShadowsFrag.fragmentshader  ShadowsVert.vertexshader  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  TextureFragmentShader.fragmentshader  TextureVertShader.vertexshader  main.cpp
source/Components/: CameraComponent.cpp  CameraComponent.h  CompanionComponent.cpp  CompanionComponent.h  Component.cpp  Component.h  ComponentInterface.cpp  ComponentsManager.cpp  ComponentsManager.h  ConcreteComponents.h  LineRendererComponent.cpp  LineRendererComponent.h  MeshRendererComponent.cpp  MeshRendererComponent.h  ModelRendererComponent.cpp  ModelRendererComponent.h  NotAloneComponent.cpp  NotAloneComponent.h  RendererComponentBase.cpp  RendererComponentBase.h  TextRendererComponent.cpp  TextRendererComponent.h  TransformComponent.cpp  TransformComponent.h
source/Controllers/: EventSystem.cpp  EventSystem.h  Initializer.cpp  Initializer.h  LightingController.cpp  LightingController.h  ResourceManager.cpp  ResourceManager.h
source/GameObject/: GameObject.cpp  GameObject.h  ObjectsManager.cpp  ObjectsManager.h
source/Math/: Ray.cpp  Ray.h  Vectors.cpp  Vectors.h
source/Shaders/: Shader.cpp  Shader.h
